feat: added required files

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@mf/auth",
+  "name": "@mf/app-admin",
   "version": "1.0.0",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
-    "build:start": "cd dist && PORT=8081 npx serve",
+    "build:start": "cd dist && PORT=8083 npx serve",
     "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
   },
@@ -21,23 +21,22 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/react": "^18.0.13",
     "@types/react-dom": "^18.0.5",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
-    "postcss": "^8.4.18",
+    "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "style-loader": "^3.3.0",
-    "tailwindcss": "^3.2.1",
     "typescript": "^4.5.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
     "@reduxjs/toolkit": "^1.8.6",
     "history": "^5.3.0",
