--- a/package.json
+++ b/package.json
@@ -8,13 +8,21 @@
     "dev:shell": "npm run dev -w @mf/shell",
     "dev:auth": "npm run serve -w @mf/auth",
     "dev:client": "npm run serve -w @mf/client",
-    "dev:admin": "npm run serve -w @mf/admin"
+    "dev:admin": "npm run serve -w @mf/admin",
+    "build:components": "npm run build -w @mf/components"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "workspaces": [
     "./apps/*",
-    "./configs/*"
-  ]
+    "./packages/*"
+  ],
+  "dependencies": {
+    "-": "^0.0.1",
+    "@mf/components": "*"
+  },
+  "devDependencies": {
+    "vite": "^5.2.7"
+  }
 }
